Break long words that were causing mobile display issues (word-wrap: break-word;)

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 body {
   font-size: 16px;
+  word-wrap: break-word;
 }
 
 pre.highlight,
